--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "autoprefixer": "^9.7.6",
-    "cssnano": "^4.1.10",
-    "postcss-cli": "^7.1.1",
-    "postcss-import": "^12.0.1",
-    "purgecss": "^2.1.2",
-    "reload": "^3.0.4",
-    "tailwindcss": "^1.4.1"
+    "autoprefixer": "^10.4.0",
+    "cssnano": "^5.0.11",
+    "postcss": "^8.3.11",
+    "postcss-cli": "^9.0.2",
+    "postcss-import": "^14.0.2",
+    "purgecss": "^4.0.3",
+    "reload": "^3.2.0",
+    "tailwindcss": "^2.2.19"
   }
 }
